- adding a scheduler to automate pulls from paypal and evaluate membership status - adding endpoint to manually refresh payment information - staging a change to enable email notifications when a member enters a grace period - removing functions to download previous payments, because paypal only lets us look back 31 days through the api
